--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,6 +32,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: update ip to DNS
-      env: DNSPOD_TOKEN: ${{ secrets.DNSPOD_TOKEN }}
+      env: DNSPOD_TOKEN：${{ secrets.DNSPOD_TOKEN }}
       run: |
         python main.py
